# numpr

./: Cargo.toml  README.md  cover.sh
numpr/: Cargo.toml
numpr-http/: Cargo.toml
numpr-http/src/: main.rs
numpr/benches/: generator_benchmark.rs  placer_benchmark.rs
numpr/src/: board.rs  consts.rs  error.rs  generator.rs  generators.rs  lib.rs  placer.rs  placers.rs  pt.rs  solver.rs  solvers.rs  unique.rs  uniques.rs
numpr/src/generators/: naive.rs
numpr/src/placers/: naive.rs  permutation.rs
numpr/src/solvers/: heuristic.rs  naive.rs
numpr/src/uniques/: naive.rs
